1998-11-25  Mario Weilguni <mweilguni@kde.org>

	* fixed a lot of rulefiles. Pentecost Monday is NOT easter+60,
	  but easter+50. My TEMPLATE file contained this bug,
	  and unfortunatly a lot of people copied it.
	* improved and new Switzerland rulefiles

1998-11-24  Harri Porten  <porten@kde.org>

	* main.cpp: store pid of setuid child in PPPData object
        * define KERNEL_VERSION()

1998-11-24  Mario Weilguni <mweilguni@kde.org>

	* fixed opener.cpp for Linux >= 2.1.0
	* removed PAP_UsePAP(), no longer needed

1998-11-23  Harri Porten  <porten@kde.org>

	* requester.cpp: removed ancient #include "requester.moc"

1998-11-22  Harri Porten  <porten@kde.org>

	* main.cpp: fixed freeze on disconnect by using waitpid(...,
	WNOHANG) instead of wait()
	* main.cpp: forgot to convert gpppdata.password to char*
	* opener.cpp: close file descriptors after being sent. Left out
	dup() call. Did it serve any special purpose ?
	* opener.h: increased allow size for username and passwords
	* modem.cpp: included config.h for HAVE_USLEEP
	(thanks to hpj.lisa@t-online.de (hpj) for reporting this)
	* PAP/CHAP: fixed typo and return value
		
1998-11-20  Harri Porten  <porten@kde.org>

	* First draft of a client&server archicture consisting of setuid
	child process that will serve requests for file manipulation from
	the parent. The parent is doing all the GUI operations is running
	with normal user privileges. Assuming the approx. 300 lines still
	running setuid root will be intensively reviewed this should
	result in a kppp far less vulnerable to security exploits.
	* added requester.* and opener.*
	* TODO: - handle signals (SIGCHLD, SIGPIPE?)
	        - replace usage Qt in pap.cpp with standard library calls
		- get ppp_available() running (presumably broken now)
		- speed up reading the syslog (reading single chars now)
		- Test, debug, test ....

1998-11-17  Mario Weilguni <mweilguni@kde.org>

	* another security hole fixed: the function make_directories() is