@@ -1,3 +1,3 @@
 #ifndef KPPPVERSION
-#define KPPPVERSION "1.5.4 (Release 132)"
+#define KPPPVERSION "1.5.5 (Release 133)"
 #endif
